components/konflux-ui/production/test/cluster/proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy
  name: proxy
  annotations:
    ignore-check.kube-linter.io/no-anti-affinity: "Using topologySpreadConstraints"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: proxy
    spec:
      serviceAccountName: proxy
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: proxy
      initContainers:
      - name: copy-static-content
        image: quay.io/konflux-ci/konflux-ui
        command:
          - cp
          - -R
          - /opt/app-root/src/.
          - /mnt/static-content/
        volumeMounts:
        - name: static-content
          mountPath: /mnt/static-content
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      - name: generate-nginx-configs
        image: registry.access.redhat.com/ubi9/ubi@sha256:66233eebd72bb5baa25190d4f55e1dc3fff3a9b77186c1f91a0abdb274452072
        envFrom:
          - configMapRef:
              name: proxy-init-config
        command:
          - sh
          - -c
          - |
            set -e

            auth_conf=/mnt/nginx-generated-config/auth.conf
            
            if [[ "$IMPERSONATE" == "true" ]]; then
              token=$(cat /mnt/api-token/token)
              echo 'auth_request_set $user  $upstream_http_x_auth_request_email;' > "$auth_conf"
              echo 'proxy_set_header Impersonate-User $user;' >> "$auth_conf"
              echo "proxy_set_header Authorization \"Bearer $token\";" >> "$auth_conf"
            else
              echo "# impersonation was disabled by config" > "$auth_conf"
            fi

            chmod 640 "$auth_conf"

            echo \
              "proxy_pass ${TEKTON_RESULTS_URL:?tekton results url must be provided};" \
              > /mnt/nginx-generated-config/tekton-results.conf

        volumeMounts:
        - name: nginx-generated-config
          mountPath: /mnt/nginx-generated-config
        - name: api-token
          mountPath: /mnt/api-token
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      containers:
      - image: registry.access.redhat.com/ubi9/nginx-124@sha256:b924363ff07ee0f8fd4f680497da774ac0721722a119665998ff5b2111098ad1
        name: nginx
        command: 
          - nginx
          - "-g"
          - "daemon off;"
          - -c
          - /etc/nginx/nginx.conf
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 9443
          name: web-tls
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            name: proxy
            readOnly: true
          - name: logs
            mountPath: /var/log/nginx
          - name: nginx-tmp
            mountPath: /var/lib/nginx/tmp
          - name: run
            mountPath: /run
          - name: serving-cert
            mountPath: /mnt
          - name: nginx-generated-config
            mountPath: /mnt/nginx-generated-config
          - name: static-content
            mountPath: /opt/app-root/src/static-content
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/konflux-ci/workspace-manager@sha256:6b7bfcf197cbff2ae9b1d84abd73636ce5733921524fb550438d8a8143a536b5
        name: workspace-manager
        ports:
          - containerPort: 5000
            name: web
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/oauth2-proxy/oauth2-proxy@sha256:3da33b9670c67bd782277f99acadf7026f75b9507bfba2088eb2d497266ef7fc
        name: oauth2-proxy
        env:
        # - name: OAUTH2_PROXY_CLIENT_SECRET
        #   valueFrom:
        #     secretKeyRef:
        #       name: proxy
        #       key: token
        - name: OAUTH2_PROXY_CLIENT_SECRET
          value: password
        - name: OAUTH2_PROXY_COOKIE_SECRET
          valueFrom:
            secretKeyRef:
              name: oauth2-proxy-cookie-secret
              key: cookie-secret
        args:
          - --provider
          - oidc
          - --provider-display-name
          - "Dex OIDC"
          - --client-id
          - oauth2-proxy
          - --http-address
          - "127.0.0.1:6000"
          - --redirect-url
          - https://localhost:9443/oauth2/callback
          - --oidc-issuer-url
          - https://localhost:9443/idp/
          - --cookie-secure
          - "true"
          - --cookie-name
          - __Host-konflux-ci-cookie
          - --email-domain
          - "*"
          - --ssl-insecure-skip-verify
          - "true"
          - --set-xauthrequest
          - "true"
          - --whitelist-domain
          - localhost:9443
        ports:
          - containerPort: 6000
            name: oauth2-proxy
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/gbenhaim0/mccutchen/go-httpbin
        name: httpbin
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi      
      volumes:
        - configMap:
            defaultMode: 420
            name: proxy
            items:
              - key: nginx.conf
                path: nginx.conf 
          name: proxy
        - name: logs
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: serving-cert
          secret:
            secretName: serving-cert
        - name: nginx-generated-config
          emptyDir: {}
        - name: api-token
          secret:
            secretName: proxy
        - name: static-content
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: web
      port: 8888
      protocol: TCP
      targetPort: web
    - name: web-tls
      port: 9443
      protocol: TCP
      targetPort: web-tls
    - name: oauth2-proxy
      port: 6000
      targetPort: oauth2-proxy
  selector:
    app: proxy
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konflux
spec:
  host: tba
  path: /
  port:
    targetPort: web-tls
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: proxy
    weight: 100
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konflux-oauth2-proxy
spec:
  host: konflux-proxy.apps.gbenhaim2.lab.upshift.rdu2.redhat.com
  path: /
  port:
    targetPort: oauth2-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: proxy
    weight: 100
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: proxy
  annotations:
    serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"konflux"}}'
    serviceaccounts.openshift.io/oauth-redirectreference.secondery: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"konflux-oauth2-proxy"}}'
---
apiVersion: v1
kind: Secret
metadata:
  name: proxy
  annotations:
    kubernetes.io/service-account.name: proxy
type: kubernetes.io/service-account-token
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: konflux-proxy
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-proxy
subjects:
- kind: ServiceAccount
  name: proxy
  namespace: konflux-ui
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: konflux-proxy-namespace-lister
rules:
- apiGroups: [""]
  resources: ["namespaces"]
  verbs: ["list", "get"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: konflux-proxy-namespace-lister
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-proxy-namespace-lister
subjects:
- kind: ServiceAccount
  name: proxy
  namespace: konflux-ui
